# swiftshare

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  test.sh
releases/: README.md  swiftshare-macos-arm64
src/: cli.rs  codec.rs  discovery.rs  error.rs  main.rs  protocol.rs  resume.rs  server.rs  state.rs  transfer.rs
web/: app.js  index.html  styles.css
