[package]
name = "swiftshare"
version = "0.1.0"
edition = "2021"
description = "Fast P2P file transfer tool for local networks"
authors = ["swiftshare"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json", "multipart", "ws"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }
socket2 = { version = "0.6", features = ["all"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
futures-util = "0.3"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
dirs = "6"
open = "5"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"

[dev-dependencies]
tempfile = "3"
